src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  .btn {
    background-color: theme("colors.black");
    color: theme("colors.white");
    border-radius: theme("borderRadius.s");
    padding-top: theme("spacing.1");
    padding-bottom: theme("spacing.1");
    padding-left: theme("spacing.2");
    padding-right: theme("spacing.2");
    box-shadow: theme("boxShadow.md");
  }
  .card {
    width: inherit;
  }
}

input,
select,
textarea {
  background-color: rgb(37 37 37);
  border: 1px solid #4a4a4a;
}
img,
h1,
h2,
h3,
p,
a,
button {
  -moz-user-select: -moz-none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -o-user-select: none;
  user-select: none;
}
.btn-primary {
  border: 1px solid #2b2b2b;
}

/*
***********************************************
GLOBAL - SWIPER 
***********************************************
*/
.swiper {
  position: relative;
  overflow: visible !important;
}
.swiper.slider_results:not(.swiper-initialized) .swiper-wrapper .swiper-slide {
  margin-right: 5px;
  width: 293px;
  height: 165px;
}
.swiper.slider_results:not(.swiper-initialized) .swiper-wrapper {
  max-height: 165px;
}
section:not(.section_slider)
  .swiper:not(.swiper-initialized)
  .swiper-wrapper
  .swiper-slide
  img {
  filter: blur(7px);
}
section.section_rating .swiper:not(.swiper-initialized) .swiper-wrapper,
section.section_rating .swiper:not(.swiper-initialized) .swiper-wrapper img {
  height: 270px;
}
section.section_rating
  .swiper:not(.swiper-initialized)
  .swiper-wrapper
  .swiper-slide {
  margin-right: 100px;
  width: 140px;
  height: 210px;
}

.slider_results .swiper-wrapper {
  height: 165px;
}
.slider_results_top .swiper-wrapper {
  height: 210px;
}
.slider_results_top .swiper-wrapper .swiper-slide,
.slider_results .swiper-wrapper .swiper-slide {
  width: auto;
}
.slider_results_top .swiper-wrapper .swiper-slide,
.slider_results .swiper-wrapper .swiper-slide,
.swiper-wrapper .swiper-slide .card,
.swiper-wrapper .swiper-slide .card figure,
.swiper-wrapper .swiper-slide .card figure img {
  height: 100%;
}
.swiper-wrapper .swiper-slide .card figure img {
  width: 100%;
}

@media screen and (max-width: 1200px) {
  .slider_results .swiper-wrapper {
    height: 142px;
  }
  .slider_results_top .swiper-wrapper {
    height: 168px;
  }

  .swiper.slider_results:not(.swiper-initialized)
    .swiper-wrapper
    .swiper-slide {
    height: 142px;
  }
  .swiper.slider_results:not(.swiper-initialized) .swiper-wrapper {
    max-height: 142px;
  }

  section.section_rating
    .swiper:not(.swiper-initialized)
    .swiper-wrapper
    .swiper-slide {
    height: 168px;
  }
}
@media screen and (max-width: 780px) {
  .slider_results .swiper-wrapper {
    height: 129px;
  }
  .slider_results_top .swiper-wrapper {
    height: 146px;
  }

  .swiper.slider_results:not(.swiper-initialized)
    .swiper-wrapper
    .swiper-slide {
    height: 129px;
  }
  .swiper.slider_results:not(.swiper-initialized) .swiper-wrapper {
    max-height: 129px;
  }

  section.section_rating
    .swiper:not(.swiper-initialized)
    .swiper-wrapper
    .swiper-slide {
    height: 146px;
  }
}
@media screen and (max-width: 550px) {
  .slider_results .swiper-wrapper {
    height: 123px;
  }
  .slider_results_top .swiper-wrapper {
    height: 134px;
  }
  .slider_results .swiper-wrapper .swiper-slide {
    max-width: 187px;
  }
  .slider_results_top .swiper-wrapper .swiper-slide {
    max-width: 70px;
  }

  .swiper.slider_results:not(.swiper-initialized)
    .swiper-wrapper
    .swiper-slide {
    height: 123px;
    max-width: 187px;
  }
  .swiper.slider_results:not(.swiper-initialized) .swiper-wrapper {
    max-height: 123px;
  }

  section.section_rating
    .swiper:not(.swiper-initialized)
    .swiper-wrapper
    .swiper-slide {
    height: 134px;
    max-width: 70px;
  }
}
@media screen and (max-width: 480px) {
  .slider_results,
  .slider_results .swiper-wrapper {
    height: 105px;
  }
  .slider_results_top,
  .slider_results_top .swiper-wrapper {
    height: 105px;
  }
  .swiper.slider_results:not(.swiper-initialized)
    .swiper-wrapper
    .swiper-slide {
    height: 105px;
  }
  .swiper.slider_results:not(.swiper-initialized) .swiper-wrapper {
    max-height: 105px;
  }
  section.section_rating
    .swiper:not(.swiper-initialized)
    .swiper-wrapper
    .swiper-slide {
    height: 105px;
  }
}
/*
***********************************************
GLOBAL - SWIPER PAGINATION
***********************************************
*/
.swiper-wrapper {
  display: flex;
  width: 100%;
}
.swiper-button-prev {
  left: -5rem;
}
.swiper-button-next {
  right: 0;
}
.swiper-button-prev,
.swiper-button-next {
  position: absolute;
  display: flex;
  align-items: center;
  top: 0;
  width: 4rem;
  height: 100%;
  opacity: 0;
}
.swiper-button-prev::before,
.swiper-button-next::before {
  position: relative;
  filter: invert(1);
  width: 4rem;
  height: 4rem;
  display: block;
  z-index: 2;
}

.swiper-button-prev::before {
  content: "";
  background: url("/chevron-left.png");
  background-size: contain;
  background-repeat: no-repeat;
}
.swiper-button-next::before {
  content: "";
  background: url("/chevron-right.png");
  background-size: contain;
  background-repeat: no-repeat;
}

.swiper-button-prev::after,
.swiper-button-next::after {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 1 !important;
}
.swiper-button-prev::after {
  background: linear-gradient(
    to right,
    rgba(20, 20, 20, 0.6) 50%,
    rgba(20, 20, 20, 0) 100%
  );
}
.swiper-button-next::after {
  background: linear-gradient(
    to left,
    rgba(20, 20, 20, 0.6) 50%,
    rgba(20, 20, 20, 0) 100%
  );
}
.swiper:hover .swiper-button-prev,
.swiper:hover .swiper-button-next {
  opacity: 1;
}
.swiper-button-disabled {
  opacity: 0 !important;
}

/*
***********************************************
GLOBAL - POPUP 
***********************************************
*/
/*
html:has(body.popup_open) {
  overflow-y: hidden;
}
*/
body.popup_open {
  overflow: hidden;
}
.popup {
  overflow-x: hidden;
  overflow-y: auto;
  -ms-overflow-style: none;
  scrollbar-width: none;
  z-index: 999;
}
.popup::-webkit-scrollbar {
  display: none;
}

/*
***********************************************
GLOBAL - RATING TOP 10
***********************************************
*/
.section_rating h2 {
  margin-left: -72px;
}
@media screen and (max-width: 550px) {
  .section_rating h2 {
    margin-left: -35px;
  }
}
.rating_text {
  transform: translate(-62px, 62px);
  -webkit-text-stroke: 4px theme("colors.gray");
}
.svg_rank {
  transform: translateX(-100%);
}
.svg_rank svg {
  height: 100%;
}
/*
***********************************************
GLOBAL - SPINNER / LOADER
***********************************************
*/
.spinner {
  position: relative;
  width: 50px;
  height: 50px;
}
.spinner::after {
  content: "";
  width: 100%;
  height: 100%;
  background-image: url("/spinner.png");
  background-repeat: no-repeat;
  background-size: contain;
  position: absolute;
  animation: loader-spin 1.1s linear infinite;
  -webkit-animation: loader-spin 1.1s linear infinite;
}
@keyframes loader-spin {
  100% {
    transform: rotate(360deg);
  }
}

